--- a/visionapp/Base.lproj/Main.storyboard
+++ b/visionapp/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-DemiBold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--CameraVC-->
         <scene sceneID="tne-QT-ifu">
@@ -17,12 +22,92 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3kn-SA-4nh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gc2-n2-Asx" customClass="RoundedShadowView" customModule="visionapp" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="30" width="335" height="60"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Puw-Ub-Dmo">
+                                                <rect key="frame" x="8" y="8" width="319" height="44"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="The names of items captured will appear here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="91q-qn-DD9">
+                                                        <rect key="frame" x="0.0" y="0.0" width="319" height="30"/>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="18"/>
+                                                        <color key="textColor" red="0.80784313730000001" green="0.3294117647" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="CONFIDENCE:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vAM-eN-RFX">
+                                                        <rect key="frame" x="125" y="30" width="69.5" height="14"/>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="10"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="Puw-Ub-Dmo" firstAttribute="top" secondItem="gc2-n2-Asx" secondAttribute="top" constant="8" id="5iu-NA-jBq"/>
+                                            <constraint firstAttribute="height" constant="60" id="C08-xW-BP2"/>
+                                            <constraint firstAttribute="bottom" secondItem="Puw-Ub-Dmo" secondAttribute="bottom" constant="8" id="a8m-F3-BI3"/>
+                                            <constraint firstAttribute="trailing" secondItem="Puw-Ub-Dmo" secondAttribute="trailing" constant="8" id="v6J-Em-tn2"/>
+                                            <constraint firstItem="Puw-Ub-Dmo" firstAttribute="leading" secondItem="gc2-n2-Asx" secondAttribute="leading" constant="8" id="zNz-M6-WHS"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDm-gP-9xu" customClass="RoundedShadowBtn" customModule="visionapp" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="615" width="85" height="32"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="85" id="Vcx-av-jpY"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
+                                        <state key="normal" title="FLASH OFF">
+                                            <color key="titleColor" red="0.80784313730000001" green="0.3294117647" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7UU-xP-HAO" customClass="RoundedShadowImageView" customModule="visionapp" customModuleProvider="target">
+                                        <rect key="frame" x="280" y="519" width="75" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="d2e-8m-wZ1"/>
+                                            <constraint firstAttribute="width" constant="75" id="gWa-Nh-k4V"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.56078431370000004" green="0.81176470590000005" blue="0.30588235289999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="sDm-gP-9xu" firstAttribute="leading" secondItem="3kn-SA-4nh" secondAttribute="leading" constant="20" id="B66-mE-8bd"/>
+                                    <constraint firstAttribute="bottom" secondItem="7UU-xP-HAO" secondAttribute="bottom" constant="20" id="Gfr-zZ-E16"/>
+                                    <constraint firstItem="gc2-n2-Asx" firstAttribute="top" secondItem="3kn-SA-4nh" secondAttribute="top" constant="30" id="KU8-Bd-rxZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="7UU-xP-HAO" secondAttribute="trailing" constant="20" id="Kz9-Li-mA0"/>
+                                    <constraint firstItem="gc2-n2-Asx" firstAttribute="leading" secondItem="3kn-SA-4nh" secondAttribute="leading" constant="20" id="Lwr-Zg-oeB"/>
+                                    <constraint firstAttribute="trailing" secondItem="gc2-n2-Asx" secondAttribute="trailing" constant="20" id="vG8-kp-3qj"/>
+                                    <constraint firstAttribute="bottom" secondItem="sDm-gP-9xu" secondAttribute="bottom" constant="20" id="yiu-A8-rke"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="3kn-SA-4nh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9SZ-Y2-unK"/>
+                            <constraint firstItem="3kn-SA-4nh" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="I1f-vP-iMd"/>
+                            <constraint firstItem="3kn-SA-4nh" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="VCC-cB-bND"/>
+                            <constraint firstItem="3kn-SA-4nh" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="hAX-a3-NT0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="cameraView" destination="3kn-SA-4nh" id="ubM-c5-SA3"/>
+                        <outlet property="captureImageView" destination="7UU-xP-HAO" id="q5A-cB-4b1"/>
+                        <outlet property="confidenceLbl" destination="vAM-eN-RFX" id="Wzq-05-5Ua"/>
+                        <outlet property="flashBtn" destination="sDm-gP-9xu" id="oUc-g5-MfB"/>
+                        <outlet property="identificationLbl" destination="91q-qn-DD9" id="6QT-Mh-FFH"/>
+                        <outlet property="roundedLblView" destination="gc2-n2-Asx" id="aUi-Iv-3SM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
         </scene>
     </scenes>
 </document>
